--- a/package.json
+++ b/package.json
@@ -9,21 +9,30 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "12.2.2",
-    "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "@sanity/client": "^3.3.0",
+    "axios": "^0.27.2",
+    "next": "12.1.6",
+    "react": "18.1.0",
+    "react-dom": "18.1.0",
+    "react-google-login": "^5.2.2",
+    "react-icons": "^4.3.1",
+    "uuidv4": "^6.2.13",
+    "zustand": "^4.0.0-rc.1"
   },
   "devDependencies": {
     "@types/node": "18.0.3",
     "@types/react": "18.0.15",
     "@types/react-dom": "18.0.6",
     "@typescript-eslint/eslint-plugin": "^5.30.6",
+    "autoprefixer": "^10.4.7",
     "eslint": "8.19.0",
     "eslint-config-next": "12.2.2",
     "eslint-config-prettier": "^8.5.0",
     "husky": "^8.0.1",
     "lint-staged": "^13.0.3",
+    "postcss": "^8.4.14",
     "prettier": "^2.7.1",
+    "tailwindcss": "^3.1.6",
     "typescript": "4.7.4"
   }
 }
